# NativeCodec

app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-codec-jni.cpp
app/src/main/cpp/player/: IsmartvBase.h  IsmartvPlayer.c  IsmartvPlayer.h  IsmartvPlayerJni.c  IsmartvPlayerJni.cpp  IsmartvPlayerJni.h
app/src/main/java/cn/ismartv/player/: IsmartvPlayer.java
app/src/main/java/com/example/nativecodec/: NativeCodec.java  NativeCodecActivity.java
app/src/main/res/layout/: main.xml
